# TotalSegmentator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_GUIDE.md  Setup+Guide.md  TotalSegmentator_config.json  dicom_slider_addon.py  material_fix.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_pipeline.py  run_server.sh  server.py  server_setup.md  setup.py  test_server.py  tests.py  tests.sh  tests_win.py
.github/: dependabot.yml
.github/workflows/: codespell.yml  lint.yml  run_tests.yml  run_tests_and_upload_docker.yml  run_tests_and_upload_docker_win.yml  run_tests_nnunet.yml  run_tests_os.yml  run_tests_subtasks.yml  run_tests_win.yml
data/: case01.json
docs/: TotalSegmentatorImproved.md  UnifiedToolkit.md
doctor_plugins/: ct_slicer_doctor.py
examples/: run_totalsegmentator_improved.py
resources/: .terraform.lock.hcl  anonymise_lightning_yaml.py  anonymise_nnunet_pkl_v2.py  body_stats_prediction.md  class_details.md  contrast_phase_classifiers.pkl  contrast_phase_prediction.md  convert_dataset_to_nnunet.py  evaluate.py  evaluate_results.txt  evans_index.md  heartchambers_highres_details.md  improvements_in_v2.md  infrastructure.tf  package_management.md  prepare_weights_for_release.sh  release.sh  results_all_classes.json  results_all_classes_mr.json  results_all_classes_v1.json  server_setup.md  server_setup.sh  totalsegmentator_server.service  totalsegmentator_snomed_mapping.csv  totalsegmentator_total_mapping.csv  totalsegmentator_totalmr_mapping.csv  train_nnunet.md  train_nnunet.sh
results/: enhanced_liver_vessels_metadata.json
results_case01/: enhanced_liver_vessels_metadata.json
test_output/: overall_summary.json
test_results/Previous/: enhanced_liver_vessels_metadata.json  liver_standard.nii
tests/: mock_imports.py  test_batch.py  test_config.py  test_device_type.py  test_end_to_end.py  test_img_split.py  test_improved_segmentator.py  test_locally.py  test_mixed_precision.py  test_mock_imports.py  test_postprocessing.py  test_python_device_selection_api.sh  test_registry.py  test_research_utils.py  test_spine_report.py  test_split_affine.py  tests.sh  tests_REMOVE.py  tests_nnunet.py  tests_os.py  tests_subtasks.sh  unittest_body_stats_prediction.json  update_test_files.sh
tests/helpers/: combine_mask_to_multilabel.py
tests/reference_files/: body_stats.json  body_stats_prediction.json  phase_prediction.json
tests/reference_files/example_ct_dicom/: CT.1.3.12.2.1107.5.1.4.60064.30000022120808113428000016573  CT.1.3.12.2.1107.5.1.4.60064.30000022120808113428000016574  CT.1.3.12.2.1107.5.1.4.60064.30000022120808113428000016575  CT.1.3.12.2.1107.5.1.4.60064.30000022120808113428000016576  CT.1.3.12.2.1107.5.1.4.60064.30000022120808113428000016577  CT.1.3.12.2.1107.5.1.4.60064.30000022120808113428000016578  CT.1.3.12.2.1107.5.1.4.60064.30000022120808113428000016579  CT.1.3.12.2.1107.5.1.4.60064.30000022120808113428000016580  (+12 more)
totalsegmentator/: alignment.py  cnn.py  config.py  cropping.py  custom_trainers.py  dicom_io.py  dicom_utils.py  download_pretrained_weights.py  enhanced_liver_vessels.py  excel.py  libs.py  map_to_binary.py  map_to_total.py  mixed_precision.py  nifti_ext_header.py  nnunet.py  nnunet_runtime_patches.py  postprocessing.py  preview.py  python_api.py  registration.py  registry.py  resample_nnunet.py  resampling.py  serialization_utils.py  statistics.py  task.py  vessel_split.py  vtk_utils.py
totalsegmentator/resources/: contrast_phase_classifiers_2024_07_19.pkl  modality_classifiers_2024_10_03.pkl  modality_classifiers_2024_10_04.pkl  modality_classifiers_2025_02_24.json.0  modality_classifiers_2025_02_24.json.1  modality_classifiers_2025_02_24.json.2  modality_classifiers_2025_02_24.json.3  modality_classifiers_2025_02_24.json.4  modality_classifiers_normalized_2025_02_24.json.0  modality_classifiers_normalized_2025_02_24.json.1  modality_classifiers_normalized_2025_02_24.json.2  modality_classifiers_normalized_2025_02_24.json.3  modality_classifiers_normalized_2025_02_24.json.4  totalsegmentator_snomed_mapping.csv
totalsegmentator/spine_report/: __init__.py  html.py  logger.py  measure_verte_height.py  nifti.py  phase.py  utils.py  utils_report.py
web-app/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
web-app/app/: layout.tsx  page.tsx
web-app/app/contexts/: LocaleContext.tsx
web-app/components/: AlertModal.tsx  FolderBrowserModal.tsx  TotalSegmentatorApp.tsx
web-app/lib/: python-executor.ts
web-app/locales/: en.json  jp.json
(+100 files in other folders)
